--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "serverless-webpack": "^5.13.0"
   },
   "dependencies": {
+    "@middy/core": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.0.4",
     "uuid": "^9.0.1"
   }
 }
